--- a/src/home.html
+++ b/src/home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,252 @@
 	<title>Creative Agency</title>
 	<link rel="stylesheet" href="css/main.css" />
 </head>
-<body>
 
+<body>
+	<header>
+		<nav class="nav">
+			<div class="nav__item">
+				<h1 class="nav__logo">digial.</h1>
+			</div>
+			<div class="nav__item">
+				<ul>
+					<li><a href="">features</a></li>
+					<li><a href="">offer</a></li>
+					<li><a href="">pricing</a></li>
+					<li><a href="">clients</a></li>
+					<li><a href="">facts</a></li>
+					<li><a href="">project</a></li>
+					<li><a href="">team</a></li>
+					<li><a href="">contact</a></li>
+				</ul>
+			</div>
+		</nav>
+		<div class="container">
+			<div class="header__title">
+
+			</div>
+			<div class="header__sub-title"></div>
+			<div class="header__description"></div>
+			<div class="header__btn"></div>
+		</div>
+	</header>
+	<section class="cards">
+		<div class="container">
+			<div class="cards__item">
+				<img src="" alt="">
+				<h1></h1>
+				<p></p>
+				<input type="text">
+			</div>
+			<div class="cards__item">
+				<img src="" alt="">
+				<h1></h1>
+				<p></p>
+				<input type="text">
+			</div>
+			<div class="cards__item">
+				<img src="" alt="">
+				<h1></h1>
+				<p></p>
+				<input type="text">
+			</div>
+		</div>
+	</section>
+	<section class="about-us">
+		<div class="container">
+			<div class="about-us__block">
+				<div class="about-us__item">
+					<h1></h1>
+					<p></p>
+					<input type="button">
+				</div>
+				<div class="about-us__item">
+					<p></p>
+					<h1></h1>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="features">
+		<div class="container">
+			<div class="features__block">
+				<div class="features__item"><img src="" alt=""></div>
+				<div class="features__item"><img src="" alt=""></div>
+				<div class="features__item"><img src="" alt=""></div>
+				<div class="features__item"><img src="" alt=""></div>
+				<div class="features__description">
+					<h1></h1>
+					<p></p>
+					<input type="text">
+				</div>
+			</div>
+		</div>
+	</section>
+	<section class="services">
+		<div class="services__block">
+			<div class="services__item">
+				<h1></h1>
+				<p></p>
+				<input type="text">
+			</div>
+		</div>
+		<div class="services__inset">
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+			<div class="inset__item">
+				<i></i>
+				<p></p>
+			</div>
+		</div>
+		<div class="services__img"></div>
+	</section>
+	<section class="team">
+		<div class="container">
+			<div class="team__title">
+				<h1></h1>
+			</div>
+			<div class="team__description">
+				<p></p>
+			</div>
+			<div class="team__employees">
+				<div class="employe__card">
+					<img src="" alt="">
+					<h1></h1>
+					<h2></h2>
+				</div>
+				<div class="employe__card">
+					<img src="" alt="">
+					<h1></h1>
+					<h2></h2>
+				</div>
+				<div class="employe__card">
+					<img src="" alt="">
+					<h1></h1>
+					<h2></h2>
+				</div>
+				<div class="employe__card">
+					<img src="" alt="">
+					<h1></h1>
+					<h2></h2>
+				</div>
+				<div class="employe__card">
+					<img src="" alt="">
+					<h1></h1>
+					<h2></h2>
+				</div>
+			</div>
+		</div>
+		<div class="team__shadow"></div>
+	</section>
+	<section class="member-page">
+		<div class="member-page__block">
+			<div class="member-page__item">
+				<h1></h1>
+				<h2></h2>
+				<p></p>
+				<div class="member-page__progress-bar">
+					<h2></h2>
+					<div class="progress-bar__item"></div>
+					<div class="progress-bar__item"></div>
+				</div>
+				<div class="member-page__progress-bar">
+					<h2></h2>
+					<div class="progress-bar__item"></div>
+					<div class="progress-bar__item"></div>
+				</div>
+				<div class="member-page__progress-bar">
+					<h2></h2>
+					<div class="progress-bar__item"></div>
+					<div class="progress-bar__item"></div>
+				</div>
+			</div>
+		</div>
+		<div class="member-page__block"></div>
+	</section>
+	<section class="price">
+		<div class="price__block">
+			<div class="price__item">
+				<h1></h1>
+				<h2></h2>
+				<h3></h3>
+				<h2></h2>
+				<p></p>
+			</div>
+		</div>
+		<div class="price__block">
+			<div class="price__item">
+				<h1></h1>
+				<h2></h2>
+				<ul>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+					<li></li>
+				</ul>
+			</div>
+			<h1></h1>
+			<p></p>
+			<p></p>
+		</div>
+	</section>
+	<section class="social-media">
+		<div class="container">
+			<div class="social-media__block">
+				<h1></h1>
+			</div>
+		</div>
+	</section>
+	<footer>
+		<div class="container">
+			<div class="footer__block">
+				<div class="footer__item">
+					<div class="item__svg"></div>
+					<div class="item__description">
+						<h1></h1>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+				<div class="footer__item">
+					<div class="item__svg"></div>
+					<div class="item__description">
+						<h1></h1>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+				<div class="footer__item">
+					<div class="item__svg"></div>
+					<div class="item__description">
+						<h1></h1>
+						<p></p>
+						<p></p>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 	<script src="js/app.bundle.js"></script>
 </body>
+
 </html>
