add header and cards section

--- a/src/home.html
+++ b/src/home.html
@@ -10,52 +10,77 @@
 </head>
 
 <body>
-	<header>
-		<nav class="nav">
-			<div class="nav__item">
-				<h1 class="nav__logo">digial.</h1>
+	<header class="header">
+		<div class="header__background">
+			<nav class="nav">
+				<div class="nav__item">
+					<h1 class="nav__logo">digital<strong class="dot">.</strong></h1>
+				</div>
+				<div class="nav__item">
+					<ul>
+						<li><a href="">features</a></li>
+						<li><a href="">offer</a></li>
+						<li><a href="">pricing</a></li>
+						<li><a href="">clients</a></li>
+						<li><a href="">facts</a></li>
+						<li><a href="">project</a></li>
+						<li><a href="">team</a></li>
+						<li><a href="">contact</a></li>
+					</ul>
+				</div>
+			</nav>
+			<div class="container container-header">
+				<div class="header__title">
+					<h1>
+						Simply the Best
+					</h1>
+				</div>
+				<div class="header__subtitle">
+					<h2>
+						Reasons for Choosing Us
+					</h2>
+				</div>
+				<div class="header__description">
+					<p>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+						aute irure dolor in reprehenderit in voluptate velit esse cillum.
+					</p>
+					<!--LATO regular jakieś wąskie takie-->
+				</div>
+				<div class="header__btn">
+					<input type="button" name="read-more" value="read more" id="btn-read-more">
+				</div>
 			</div>
-			<div class="nav__item">
-				<ul>
-					<li><a href="">features</a></li>
-					<li><a href="">offer</a></li>
-					<li><a href="">pricing</a></li>
-					<li><a href="">clients</a></li>
-					<li><a href="">facts</a></li>
-					<li><a href="">project</a></li>
-					<li><a href="">team</a></li>
-					<li><a href="">contact</a></li>
-				</ul>
-			</div>
-		</nav>
-		<div class="container">
-			<div class="header__title">
-
-			</div>
-			<div class="header__sub-title"></div>
-			<div class="header__description"></div>
-			<div class="header__btn"></div>
 		</div>
 	</header>
 	<section class="cards">
-		<div class="container">
+		<div class="container container-cards">
 			<div class="cards__item">
-				<img src="" alt="">
-				<h1></h1>
-				<p></p>
-				<input type="text">
+				<img src="/images/cards1.png" alt="">
+				<div class="cards__text">
+					<h1>Best TrackRecord</h1>
+					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						Duis aute</p>
+					<input type="button" value="read more">
+				</div>
 			</div>
 			<div class="cards__item">
-				<img src="" alt="">
-				<h1></h1>
-				<p></p>
-				<input type="text">
+				<img src="/images/cards2.png" alt="">
+				<div class="cards__text">
+					<h1>Trusted by Leaders</h1>
+					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						Duis aute</p>
+					<input type="button" value="read more">
+				</div>
 			</div>
 			<div class="cards__item">
-				<img src="" alt="">
-				<h1></h1>
-				<p></p>
-				<input type="text">
+				<img src="/images/cards3.png" alt="">
+				<div class="cards__text">
+					<h1>Brand Equilty</h1>
+					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+						Duis aute</p>
+					<input type="button" value="read more">
+				</div>
 			</div>
 		</div>
 	</section>
