Add footer, social media and price section

--- a/src/home.html
+++ b/src/home.html
@@ -7,6 +7,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Creative Agency</title>
 	<link rel="stylesheet" href="css/main.css" />
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+	 crossorigin="anonymous">
 </head>
 
 <body>
@@ -61,7 +63,7 @@
 					<h1>Best TrackRecord</h1>
 					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						Duis aute</p>
-					<input type="button" value="read more">
+					<input type="button" value="read more" class="btn">
 				</div>
 			</div>
 			<div class="cards__item">
@@ -70,7 +72,7 @@
 					<h1>Trusted by Leaders</h1>
 					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						Duis aute</p>
-					<input type="button" value="read more">
+					<input type="button" value="read more" class="btn">
 				</div>
 			</div>
 			<div class="cards__item">
@@ -79,7 +81,7 @@
 					<h1>Brand Equilty</h1>
 					<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
 						Duis aute</p>
-					<input type="button" value="read more">
+					<input type="button" value="read more" class="btn">
 				</div>
 			</div>
 		</div>
@@ -88,13 +90,26 @@
 		<div class="container">
 			<div class="about-us__block">
 				<div class="about-us__item">
-					<h1></h1>
-					<p></p>
-					<input type="button">
+					<h1>We are Creative Agency</h1>
+					<p>
+						<strong>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.
+						</strong>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+						aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum
+						dolor sit amet, consectetur adipiscing elit, sed</p>
+					<input type="button" class="btn btn--position" value="read more">
 				</div>
+				<h1 class="big-letter">A</h1>
 				<div class="about-us__item">
-					<p></p>
-					<h1></h1>
+					<p><strong>
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+							magna aliqua.
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+							aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+						</strong></p>
+					<h1>Anita Allen</h1>
 				</div>
 			</div>
 		</div>
@@ -216,35 +231,78 @@
 	<section class="price">
 		<div class="price__block">
 			<div class="price__item">
-				<h1></h1>
-				<h2></h2>
-				<h3></h3>
-				<h2></h2>
-				<p></p>
+				<h1>Professional</h1>
+				<h2 class="fixed--color">website design</h2>
+				<h3><small>$</small>49.<small>99</small></h3>
+				<h2>Overview</h2>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit</p>
 			</div>
 		</div>
 		<div class="price__block">
 			<div class="price__item">
-				<h1></h1>
-				<h2></h2>
+				<h1>our best</h1>
+				<h2>Feature</h2>
 				<ul>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
-					<li></li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
+					<li><i class="fas fa-check icon--list"></i>Lorem ipsum dolor sit amet.</li>
 				</ul>
+				<input type="button" class="btn btn--position btn--white" value="READ MORE">
 			</div>
-			<h1></h1>
-			<p></p>
-			<p></p>
+			<div class="price__about">
+				<h1>Take your website <br> to the next level</h1>
+				<br>
+				<p><strong>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+				</strong> </p> <br>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
 		</div>
 	</section>
 	<section class="social-media">
 		<div class="container">
 			<div class="social-media__block">
-				<h1></h1>
+				<h1>Get in Touch</h1>
+				<div class="social-media__list">
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-facebook-f fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-google-plus-g fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-vk fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-youtube fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-linkedin-in fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-google-plus-g fa-2x icon--white"></i>
+						</a>
+					</div>
+					<div class="list__circe">
+						<a href="#">
+							<i class="fab fa-deviantart fa-2x icon--white"></i>
+						</a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</section>
@@ -252,27 +310,33 @@
 		<div class="container">
 			<div class="footer__block">
 				<div class="footer__item">
-					<div class="item__svg"></div>
+					<div class="item__svg">
+						<i class="far fa-envelope fa-5x color-icon"></i>
+					</div>
 					<div class="item__description">
-						<h1></h1>
-						<p></p>
-						<p></p>
+						<h1>email</h1>
+						<p>agency@contact.com</p>
+						<p>agency@contact.com</p>
 					</div>
 				</div>
 				<div class="footer__item">
-					<div class="item__svg"></div>
+					<div class="item__svg">
+						<i class="fas fa-mobile-alt fa-5x color-icon"></i>
+					</div>
 					<div class="item__description">
-						<h1></h1>
-						<p></p>
-						<p></p>
+						<h1>call us</h1>
+						<p>+12 343 234 542</p>
+						<p>+12 343 234 542</p>
 					</div>
 				</div>
 				<div class="footer__item">
-					<div class="item__svg"></div>
+					<div class="item__svg">
+						<i class="fas fa-map-marker-alt fa-5x color-icon"></i>
+					</div>
 					<div class="item__description">
-						<h1></h1>
-						<p></p>
-						<p></p>
+						<h1>address</h1>
+						<p>Krakow, Jana 31</p>
+						<p>Poland 2134</p>
 					</div>
 				</div>
 			</div>
