Add member page section

--- a/src/home.html
+++ b/src/home.html
@@ -206,27 +206,57 @@
 	<section class="member-page">
 		<div class="member-page__block">
 			<div class="member-page__item">
-				<h1></h1>
-				<h2></h2>
-				<p></p>
+				<h1>&nbsp;anita allen</h1>
+				<h2>graphic designer</h2>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim
+					veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 				<div class="member-page__progress-bar">
-					<h2></h2>
-					<div class="progress-bar__item"></div>
+					<h2>Creativity</h2>
+					<div class="pair">
+						<div class="progress-bar__item progress-bar--color"></div>
+						<h2>80%</h2>
+					</div>
 					<div class="progress-bar__item"></div>
 				</div>
 				<div class="member-page__progress-bar">
-					<h2></h2>
-					<div class="progress-bar__item"></div>
+					<h2>team work</h2>
+					<div class="pair">
+							<div class="progress-bar__item progress-bar--color"></div>
+							<h2>80%</h2>
+						</div>
 					<div class="progress-bar__item"></div>
 				</div>
 				<div class="member-page__progress-bar">
-					<h2></h2>
-					<div class="progress-bar__item"></div>
+					<h2>designing</h2>
+					<div class="pair">
+							<div class="progress-bar__item progress-bar--color"></div>
+							<h2>80%</h2>
+						</div>
 					<div class="progress-bar__item"></div>
 				</div>
 			</div>
 		</div>
-		<div class="member-page__block"></div>
+		<div class="member-page__block">
+			<img src="images/member-girl.png" alt="">
+			<div class="member-page__item">
+				<div class="item__header">
+					<h2>Ut wnim ad minin venim, quis</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quibusdam maiores nulla.</p>
+				</div>
+				<div class="item__socials">
+					<div class="item__circle">
+						<i class="fab fa-facebook-f fa-2x"></i>
+					</div>
+					<div class="item__circle">
+						<i class="fab fa-google-plus-g fa-2x"></i>
+					</div>
+					<div class="item__circle">
+						<i class="fab fa-vk fa-2x"></i>
+					</div>
+				</div>
+			</div>
+		</div>
 	</section>
 	<section class="price">
 		<div class="price__block">
@@ -235,7 +265,8 @@
 				<h2 class="fixed--color">website design</h2>
 				<h3><small>$</small>49.<small>99</small></h3>
 				<h2>Overview</h2>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit</p>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit in voluptate velit</p>
 			</div>
 		</div>
 		<div class="price__block">
@@ -256,9 +287,12 @@
 				<h1>Take your website <br> to the next level</h1>
 				<br>
 				<p><strong>
-						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-				</strong> </p> <br>
-				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+						aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+					</strong> </p> <br>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Ut enim ad minim
+					veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 			</div>
 		</div>
 	</section>
