Add images and some html

--- a/src/home.html
+++ b/src/home.html
@@ -132,72 +132,87 @@
 	<section class="services">
 		<div class="services__block">
 			<div class="services__item">
-				<h1></h1>
-				<p></p>
-				<input type="text">
+				<div class="item__description">
+
+					<h1>Services <br>  We Provide</h1>
+					<p>
+						<strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+							dolore magna aliqua.</strong> <br>
+							Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+							aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor
+							sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+						</p>
+						<input type="button" class="btn btn--services btn--position" value="READ MORE">
+				</div>
+			</div>
+			<div class="services__img">
+				<img src="images/services.png" alt="">
 			</div>
 		</div>
-		<div class="services__inset">
+		<!-- <div class="services__inset">
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="far fa-flag"></i>
+				<p>logo & branding</p>
 			</div>
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="fas fa-desktop"></i>
+				<p>social media branding</p>
 			</div>
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="fas fa-user-check"></i>
+				<p>digital products</p>
 			</div>
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="far fa-flag"></i>
+				<p>logo and branding</p>
 			</div>
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="far fa-chart-bar"></i>
+				<p>Loremipsum dolor</p>
 			</div>
 			<div class="inset__item">
-				<i></i>
-				<p></p>
+				<i class="fas fa-briefcase"></i>
+				<p>mobile & web</p>
 			</div>
-		</div>
-		<div class="services__img"></div>
+		</div> -->
 	</section>
 	<section class="team">
-		<div class="container">
+		<div class="container team--container">
 			<div class="team__title">
-				<h1></h1>
+				<h1>We are Perfect Team</h1>
 			</div>
 			<div class="team__description">
-				<p></p>
+				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+					aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor
+					sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+					ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+					irure.</p>
 			</div>
 			<div class="team__employees">
 				<div class="employe__card">
-					<img src="" alt="">
-					<h1></h1>
-					<h2></h2>
+					<img src="images/team1.png" alt="">
+					<h1>Jeff Norton</h1>
+					<h2>Graphic Designer</h2>
 				</div>
 				<div class="employe__card">
-					<img src="" alt="">
-					<h1></h1>
-					<h2></h2>
+					<img src="images/team2.png" alt="">
+					<h1>Anita Allen</h1>
+					<h2>Graphic Designer</h2>
 				</div>
 				<div class="employe__card">
-					<img src="" alt="">
-					<h1></h1>
-					<h2></h2>
+					<img src="images/team3.png" alt="">
+					<h1>Jeff Norton</h1>
+					<h2>Graphic Designer</h2>
 				</div>
 				<div class="employe__card">
-					<img src="" alt="">
-					<h1></h1>
-					<h2></h2>
+					<img src="images/team4.png" alt="">
+					<h1>Anita Allen</h1>
+					<h2>Graphic Designer</h2>
 				</div>
 				<div class="employe__card">
-					<img src="" alt="">
-					<h1></h1>
-					<h2></h2>
+					<img src="images/team5.png" alt="">
+					<h1>Jeff Norton</h1>
+					<h2>Graphic Designer</h2>
 				</div>
 			</div>
 		</div>
@@ -222,17 +237,17 @@
 				<div class="member-page__progress-bar">
 					<h2>team work</h2>
 					<div class="pair">
-							<div class="progress-bar__item progress-bar--color"></div>
-							<h2>80%</h2>
-						</div>
+						<div class="progress-bar__item progress-bar--color"></div>
+						<h2>80%</h2>
+					</div>
 					<div class="progress-bar__item"></div>
 				</div>
 				<div class="member-page__progress-bar">
 					<h2>designing</h2>
 					<div class="pair">
-							<div class="progress-bar__item progress-bar--color"></div>
-							<h2>80%</h2>
-						</div>
+						<div class="progress-bar__item progress-bar--color"></div>
+						<h2>80%</h2>
+					</div>
 					<div class="progress-bar__item"></div>
 				</div>
 			</div>
