Add features section

--- a/src/home.html
+++ b/src/home.html
@@ -117,14 +117,14 @@
 	<section class="features">
 		<div class="container">
 			<div class="features__block">
-				<div class="features__item"><img src="" alt=""></div>
-				<div class="features__item"><img src="" alt=""></div>
-				<div class="features__item"><img src="" alt=""></div>
-				<div class="features__item"><img src="" alt=""></div>
+				<div class="features__item"><img src="images/features-img1.png" alt=""></div>
+				<div class="features__item"><img src="images/features-img2.png" alt=""></div>
+				<div class="features__item"><img src="images/features-img3.png" alt=""></div>
+				<div class="features__item"><img src="images/features-img4.png" alt=""></div>
 				<div class="features__description">
-					<h1></h1>
-					<p></p>
-					<input type="text">
+					<h1>amazing features</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+					<input type="button" class="btn btn--services btn--position" value="read more">
 				</div>
 			</div>
 		</div>
@@ -149,32 +149,32 @@
 				<img src="images/services.png" alt="">
 			</div>
 		</div>
-		<!-- <div class="services__inset">
+		<div class="services__inset">
 			<div class="inset__item">
-				<i class="far fa-flag"></i>
-				<p>logo & branding</p>
+				<i class="far fa-flag fa-3x"></i>
+				<p>logo & <br> branding</p>
+			</div>
+			<div class="inset__item fixed-border">
+				<i class="fas fa-desktop fa-3x"></i>
+				<p>social media <br> branding</p>
 			</div>
 			<div class="inset__item">
-				<i class="fas fa-desktop"></i>
-				<p>social media branding</p>
+				<i class="fas fa-user-check fa-3x"></i>
+				<p>digital <br> products</p>
+			</div>
+			<div class="inset__item fixed-border">
+				<i class="far fa-flag fa-3x"></i>
+				<p>logo and <br> branding</p>
 			</div>
 			<div class="inset__item">
-				<i class="fas fa-user-check"></i>
-				<p>digital products</p>
+				<i class="far fa-chart-bar fa-3x"></i>
+				<p>Loremipsum <br> dolor</p>
 			</div>
-			<div class="inset__item">
-				<i class="far fa-flag"></i>
-				<p>logo and branding</p>
+			<div class="inset__item fixed-border">
+				<i class="fas fa-briefcase fa-3x"></i>
+				<p>mobile <br> & web</p>
 			</div>
-			<div class="inset__item">
-				<i class="far fa-chart-bar"></i>
-				<p>Loremipsum dolor</p>
-			</div>
-			<div class="inset__item">
-				<i class="fas fa-briefcase"></i>
-				<p>mobile & web</p>
-			</div>
-		</div> -->
+		</div>
 	</section>
 	<section class="team">
 		<div class="container team--container">
