Working project without rwd

--- a/src/home.html
+++ b/src/home.html
@@ -87,21 +87,21 @@
 		</div>
 	</section>
 	<section class="about-us">
-		<div class="container">
+		<div class="container container--height">
 			<div class="about-us__block">
 				<div class="about-us__item">
-					<h1>We are Creative Agency</h1>
+					<h1>We are  </br> Creative Agency</h1>
 					<p>
 						<strong>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
 							dolore magna aliqua.
-						</strong>
+						</strong> <br>
 						Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
 						aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum
 						dolor sit amet, consectetur adipiscing elit, sed</p>
 					<input type="button" class="btn btn--position" value="read more">
 				</div>
-				<h1 class="big-letter">A</h1>
+				
 				<div class="about-us__item">
 					<p><strong>
 							Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
@@ -111,6 +111,11 @@
 						</strong></p>
 					<h1>Anita Allen</h1>
 				</div>
+			</div>
+			<div class="big-letter">
+				<h1>
+					A
+				</h1>
 			</div>
 		</div>
 	</section>
@@ -184,9 +189,7 @@
 			<div class="team__description">
 				<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
 					aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.Lorem ipsum dolor
-					sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-					ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-					irure.</p>
+					sit amet, consectetur adipiscing elit, sed do</p>
 			</div>
 			<div class="team__employees">
 				<div class="employe__card">
