Add responsive to wide resolution

--- a/src/home.html
+++ b/src/home.html
@@ -260,7 +260,8 @@
 			<div class="member-page__item">
 				<div class="item__header">
 					<h2>Ut wnim ad minin venim, quis</h2>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi quibusdam maiores nulla.</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br>
+						 Animi quibusdam maiores nulla.</p>
 				</div>
 				<div class="item__socials">
 					<div class="item__circle">
