Add responsive to social media, features and about-us section

--- a/src/home.html
+++ b/src/home.html
@@ -344,40 +344,40 @@
 				<div class="social-media__block">
 					<h1>Get in Touch</h1>
 					<div class="social-media__list">
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-facebook-f fa-2x icon--white"></i>
-							</a>
+						<div class="circle-pair">
+
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-facebook-f fa-2x icon--white"></i>
+								</a>
+							</div>
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-google-plus-g fa-2x icon--white"></i>
+								</a>
+							</div>
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-vk fa-2x icon--white"></i>
+								</a>
+							</div>
 						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-google-plus-g fa-2x icon--white"></i>
-							</a>
-						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-vk fa-2x icon--white"></i>
-							</a>
-						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-youtube fa-2x icon--white"></i>
-							</a>
-						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-linkedin-in fa-2x icon--white"></i>
-							</a>
-						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-google-plus-g fa-2x icon--white"></i>
-							</a>
-						</div>
-						<div class="list__circe">
-							<a href="#">
-								<i class="fab fa-deviantart fa-2x icon--white"></i>
-							</a>
+						<div class="circle-pair">
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-youtube fa-2x icon--white"></i>
+								</a>
+							</div>
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-linkedin-in fa-2x icon--white"></i>
+								</a>
+							</div>
+							<div class="list__circe">
+								<a href="#">
+									<i class="fab fa-google-plus-g fa-2x icon--white"></i>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
