Add response to price section

--- a/src/home.html
+++ b/src/home.html
@@ -325,6 +325,9 @@
 					</ul>
 					<input type="button" class="btn btn--position btn--white" value="READ MORE">
 				</div>
+
+			</div>
+			<div class="price__block">
 				<div class="price__about">
 					<h1>Take your website <br> to the next level</h1>
 					<br>
