--- a/src/home.html
+++ b/src/home.html
@@ -13,19 +13,20 @@
 
 <body>
 	<div class="small-menu">
+		<i class="fas fa-times fa-2x" id="cross"></i>
 		<ul>
-			<li><a href="">features</a></li>
-			<li><a href="">offer</a></li>
-			<li><a href="">pricing</a></li>
-			<li><a href="">clients</a></li>
-			<li><a href="">facts</a></li>
-			<li><a href="">project</a></li>
-			<li><a href="">team</a></li>
-			<li><a href="">contact</a></li>
+			<li><a class="hamburger-link" href="#features">features</a></li>
+			<li><a class="hamburger-link" href="#offer">offer</a></li>
+			<li><a class="hamburger-link" href="#pricing">pricing</a></li>
+			<li><a class="hamburger-link" href="#clients">clients</a></li>
+			<li><a class="hamburger-link" href="#facts">facts</a></li>
+			<li><a class="hamburger-link" href="#project">project</a></li>
+			<li><a class="hamburger-link" href="#team">team</a></li>
+			<li><a class="hamburger-link" href="#contact">contact</a></li>
 		</ul>
 	</div>
-	<main>
-		<header class="header">
+	<main id="main">
+		<header class="header" id="clients">
 			<div class="header__background">
 				<nav class="nav">
 					<div class="nav__item">
@@ -43,7 +44,7 @@
 							<li><a href="">contact</a></li>
 						</ul>
 					</div>
-					<i class="fas fa-bars fa-2x hamburger-display"></i>
+					<i class="fas fa-bars fa-2x hamburger-display "></i>
 				</nav>
 				<div class="container container-header">
 					<div class="header__title">
@@ -69,7 +70,7 @@
 				</div>
 			</div>
 		</header>
-		<section class="cards">
+		<section class="cards" id="offer">
 			<div class="container container-cards">
 				<div class="cards__item">
 					<img src="images/cards1.png" alt="">
@@ -100,7 +101,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="about-us">
+		<section class="about-us" id="facts">
 			<div class="container container--height">
 				<div class="about-us__block">
 					<div class="about-us__item">
@@ -134,7 +135,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="features">
+		<section class="features" id="features">
 			<div class="container">
 				<div class="features__block">
 					<div class="features__item"><img src="images/features-img1.png" alt=""></div>
@@ -152,7 +153,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="services">
+		<section class="services" id="project">
 			<div class="services__block">
 				<div class="services__item">
 					<div class="item__description">
@@ -200,7 +201,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="team">
+		<section class="team" id="team">
 			<div class="container team--container">
 				<div class="team__title">
 					<h1>We are Perfect Team</h1>
@@ -299,7 +300,7 @@
 				</div>
 			</div>
 		</section>
-		<section class="price">
+		<section class="price" id="pricing">
 			<div class="price__block">
 				<div class="price__item">
 					<h1>Professional</h1>
@@ -386,7 +387,7 @@
 				</div>
 			</div>
 		</section>
-		<footer>
+		<footer id="contact">
 			<div class="container">
 				<div class="footer__block">
 					<div class="footer__item">
